Some fixes for newer jres